--- a/project/jni/application/c-dogs/AndroidAppSettings.cfg
+++ b/project/jni/application/c-dogs/AndroidAppSettings.cfg
@@ -6,10 +6,10 @@ AppSettingVersion=19
 LibSdlVersion=1.2
 
 # Specify application name (e.x. My Application)
-AppName="OpenArena"
+AppName="C-Dogs"
 
 # Specify reversed site name of application (e.x. com.mysite.myapp)
-AppFullName=ws.openarena.sdl
+AppFullName=cxong.cdogs
 
 # Specify screen orientation: (v)ertical/(p)ortrait or (h)orizontal/(l)andscape
 ScreenOrientation=h
@@ -23,14 +23,14 @@ InhibitSuspend=n
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
-AppDataDownloadUrl="!Game data|:baseoa/pak0.pk3:http://sourceforge.net/projects/libsdl-android/files/OpenArena/0.8.8/pak0.pk3/download^!Game data|:baseoa/pak1-maps.pk3:http://sourceforge.net/projects/libsdl-android/files/OpenArena/0.8.8/pak1-maps.pk3/download^!Game data|:baseoa/pak2-players-mature.pk3:http://sourceforge.net/projects/libsdl-android/files/OpenArena/0.8.8/pak2-players-mature.pk3/download^!Game data|:baseoa/pak2-players.pk3:http://sourceforge.net/projects/libsdl-android/files/OpenArena/0.8.8/pak2-players.pk3/download^!Game data|:baseoa/pak4-textures.pk3:http://sourceforge.net/projects/libsdl-android/files/OpenArena/0.8.8/pak4-textures.pk3/download^!Game data|:baseoa/pak5-TA.pk3:http://sourceforge.net/projects/libsdl-android/files/OpenArena/0.8.8/pak5-TA.pk3/download^!Game data|:baseoa/pak6-misc.pk3:http://sourceforge.net/projects/libsdl-android/files/OpenArena/0.8.8/pak6-misc.pk3/download^!Game data|:baseoa/pak6-patch085.pk3:http://sourceforge.net/projects/libsdl-android/files/OpenArena/0.8.8/pak6-patch085.pk3/download^!Game data|:baseoa/pak6-patch088.pk3:http://sourceforge.net/projects/libsdl-android/files/OpenArena/0.8.8/pak6-patch088.pk3/download^!Game data|:baseoa/skn-arachna-forlorna.pk3:http://sourceforge.net/projects/libsdl-android/files/OpenArena/0.8.8/skn-arachna-forlorna.pk3/download^!Game logic|:baseoa/pak7-android.pk3:pak7-android.pk3"
+AppDataDownloadUrl="!!Game data|data.zip"
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
-VideoDepthBpp=24
+VideoDepthBpp=16
 
 # Enable OpenGL depth buffer (needed only for 3-d applications, small speed decrease) (y) or (n)
-NeedDepthBuffer=y
+NeedDepthBuffer=n
 
 # Enable OpenGL stencil buffer (needed only for 3-d applications, small speed decrease) (y) or (n)
 NeedStencilBuffer=n
@@ -47,7 +47,7 @@ SwVideoMode=n
 SdlVideoResize=y
 
 # Application resizing will keep 4:3 aspect ratio, with black bars at sides (y)/(n)
-SdlVideoResizeKeepAspect=n
+SdlVideoResizeKeepAspect=y
 
 # Application does not call SDL_Flip() or SDL_UpdateRects() appropriately, or draws from non-main thread -
 # enabling the compatibility mode will force screen update every 100 milliseconds, which is laggy and inefficient (y) or (n)
@@ -94,24 +94,24 @@ AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 
 # Application uses joystick (y) or (n), the on-screen DPAD will be used as joystick 0 axes 0-1
-AppUsesJoystick=y
+AppUsesJoystick=n
 
 # Application uses second on-screen joystick, as SDL joystick 0 axes 2-3 (y)/(n)
 AppUsesSecondJoystick=n
 
 # Application uses accelerometer (y) or (n), the accelerometer will be used as joystick 1 axes 0-1 and 5-7
-AppUsesAccelerometer=y
+AppUsesAccelerometer=n
 
 # Application uses gyroscope (y) or (n), the gyroscope will be used as joystick 1 axes 2-4
-AppUsesGyroscope=y
+AppUsesGyroscope=n
 
 # Application uses multitouch (y) or (n), multitouch events are passed as SDL_JOYBALLMOTION events for the joystick 0
-AppUsesMultitouch=y
+AppUsesMultitouch=n
 
 # Application records audio (it will use any available source, such a s microphone)
 # API is defined in file SDL_android.h: int SDL_ANDROID_OpenAudioRecording(SDL_AudioSpec *spec); void SDL_ANDROID_CloseAudioRecording(void);
 # This option will add additional permission to Android manifest (y)/(n)
-AppRecordsAudio=y
+AppRecordsAudio=n
 
 # Application implements Android-specific routines to put to background, and will not draw anything to screen
 # between SDL_ACTIVEEVENT lost / gained notifications - you should check for them
@@ -124,26 +124,26 @@ NonBlockingSwapBuffers=n
 # SEARCH and CALL by default return same keycode as DPAD_CENTER - one of those keys is available on most devices
 # Use word NO_REMAP if you want to preserve native functionality for certain key (volume keys are 3-rd and 4-th)
 # Keys: TOUCHSCREEN (works only when AppUsesMouse=n), DPAD_CENTER/SEARCH, VOLUMEUP, VOLUMEDOWN, MENU, BACK, CAMERA
-RedefinedKeys="SPACE SPACE NO_REMAP NO_REMAP RETURN ESCAPE LCTRL"
+RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
 
 # Number of virtual keyboard keys (currently 6 is maximum)
-AppTouchscreenKeyboardKeysAmount=6
+AppTouchscreenKeyboardKeysAmount=3
 
 # Number of virtual keyboard keys that support autofire (currently 2 is maximum)
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
-RedefinedKeysScreenKb="SLASH BACKSPACE TAB END LCTRL SPACE UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
+RedefinedKeysScreenKb="RSHIFT RETURN TAB"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
-RedefinedKeysScreenKbNames="Change_weapon Sniper_view Show_scores Center_view Fire Jump"
+RedefinedKeysScreenKbNames="Fire Weapons Map"
 
 # How long to show startup menu button, in msec, 0 to disable startup menu
-StartupMenuButtonTimeout=3000
+StartupMenuButtonTimeout=0
 
 # Menu items to hide from startup menu, available menu items:
 #  SettingsMenu.OkButton SettingsMenu.DummyMenu SettingsMenu.MainMenu  SettingsMenuMisc.DownloadConfig SettingsMenuMisc.OptionalDownloadConfig SettingsMenuMisc.AudioConfig SettingsMenuMisc.VideoSettingsConfig SettingsMenuMisc.ShowReadme SettingsMenuMisc.GyroscopeCalibration SettingsMenuMisc.ResetToDefaultsConfig  SettingsMenuMouse.MouseConfigMainMenu SettingsMenuMouse.DisplaySizeConfig SettingsMenuMouse.LeftClickConfig SettingsMenuMouse.RightClickConfig SettingsMenuMouse.AdditionalMouseConfig SettingsMenuMouse.JoystickMouseConfig SettingsMenuMouse.TouchPressureMeasurementTool SettingsMenuMouse.CalibrateTouchscreenMenu  SettingsMenuKeyboard.KeyboardConfigMainMenu SettingsMenuKeyboard.ScreenKeyboardSizeConfig SettingsMenuKeyboard.ScreenKeyboardDrawSizeConfig SettingsMenuKeyboard.ScreenKeyboardThemeConfig SettingsMenuKeyboard.ScreenKeyboardTransparencyConfig SettingsMenuKeyboard.RemapHwKeysConfig SettingsMenuKeyboard.RemapScreenKbConfig SettingsMenuKeyboard.ScreenGesturesConfig SettingsMenuKeyboard.CustomizeScreenKbLayout 
-HiddenMenuOptions='SettingsMenuMisc.OptionalDownloadConfig SettingsMenuMouse.DisplaySizeConfig'
+HiddenMenuOptions=''
 
 # Menu items to show at startup - this is Java code snippet, leave empty for default
 # new SettingsMenuMisc.ShowReadme(), (AppUsesMouse \&\& \! ForceRelativeMouseMode \? new SettingsMenuMouse.DisplaySizeConfig(true) : new SettingsMenu.DummyMenu()), new SettingsMenuMisc.OptionalDownloadConfig(true), new SettingsMenuMisc.GyroscopeCalibration()
@@ -153,33 +153,33 @@ FirstStartMenuOptions=''
 
 # Enable multi-ABI binary, with hardware FPU support - it will also work on old devices,
 # but .apk size is 2x bigger (y) / (n) / (x86) / (all)
-MultiABI=y
+MultiABI=n
 
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
-AppMinimumRAM=300
+AppMinimumRAM=0
 
 # Application version code (integer)
-AppVersionCode=08823
+AppVersionCode=101
 
 # Application user-visible version name (string)
-AppVersionName="0.8.8.23"
+AppVersionName="1.01"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag"
+DeleteFilesOnUpgrade="%"
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
 # Available libraries: mad (GPL-ed!) sdl_mixer sdl_image sdl_ttf sdl_net sdl_blitpool sdl_gfx sdl_sound intl xml2 lua jpeg png ogg flac tremor vorbis freetype xerces curl theora fluidsynth lzma lzo2 mikmod openal timidity zzip bzip2 yaml-cpp python boost_date_time boost_filesystem boost_iostreams boost_program_options boost_regex boost_signals boost_system boost_thread glu avcodec avdevice avfilter avformat avresample avutil swscale swresample bzip2 
-CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg openal"
+CompiledLibraries="sdl_image sdl_mixer"
 
 # Application uses custom build script AndroidBuild.sh instead of Android.mk (y) or (n)
-CustomBuildScript=y
+CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-O2 -finline-functions'
+AppCflags='-O2 -finline-functions -D__MACTYPES__'
 
 # Additional LDFLAGS for application
 AppLdflags=''
@@ -188,10 +188,10 @@ AppLdflags=''
 AppOverlapsSystemHeaders=
 
 # Build only following subdirs (empty will build all dirs, ignored with custom script)
-AppSubdirsBuild=''
+AppSubdirsBuild='src/src src/src/cdogs src/src/json src/src/missions src/src/tinydir'
 
 # Exclude these files from build
-AppBuildExclude=''
+AppBuildExclude='src/src/cdogsed.c'
 
 # Application command line parameters, including app name as 0-th param
 AppCmdline=''
@@ -202,14 +202,14 @@ ReadmeText='^Readme text'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
-MinimumScreenSize=n
+MinimumScreenSize=s
 
 # Your AdMob Publisher ID, (n) if you don't want advertisements
 AdmobPublisherId=n
 
 # Your AdMob test device ID, to receive a test ad
-AdmobTestDeviceId=66133194946FB6C1CD0ED2EFCCB82539
+AdmobTestDeviceId=
 
 # Your AdMob banner size (BANNER/IAB_BANNER/IAB_LEADERBOARD/IAB_MRECT/IAB_WIDE_SKYSCRAPER/SMART_BANNER)
-AdmobBannerSize=BANNER
+AdmobBannerSize=
 
