--- a/project/jni/application/openttd/AndroidData/openttd-1.3.0.25.cfg
+++ b/project/jni/application/openttd/AndroidData/openttd-1.3.0.25.cfg
@@ -14,6 +14,7 @@ medium_aa = true
 large_aa = true
 mono_aa = true
 last_newgrf_count = 1
+language = english.lng
 
 [newgrf]
 opengfx+biggui.grf = 
