VCMI: aimlessly messing around

--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -202,7 +202,7 @@ ReadmeText='^You may press "Home" now - the data will be downloaded in backgroun
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
-MinimumScreenSize=s
+MinimumScreenSize=m
 
 # Your AdMob Publisher ID, (n) if you don't want advertisements
 AdmobPublisherId=n
