Added SDL_mixer MIDI test app

--- a/project/jni/application/testmidi/AndroidAppSettings.cfg
+++ b/project/jni/application/testmidi/AndroidAppSettings.cfg
@@ -6,10 +6,10 @@ AppSettingVersion=19
 LibSdlVersion=1.2
 
 # Specify application name (e.x. My Application)
-AppName="SDL music test"
+AppName="SDL MIDI music test"
 
 # Specify reversed site name of application (e.x. com.mysite.myapp)
-AppFullName=net.olofson.ballfield.testmusic
+AppFullName=net.olofson.ballfield.testmidi
 
 # Specify screen orientation: (v)ertical/(p)ortrait or (h)orizontal/(l)andscape
 ScreenOrientation=h
@@ -23,7 +23,7 @@ InhibitSuspend=n
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
-AppDataDownloadUrl="!Game data|ballfield2.zip^!Music|MilkyTracker-ExampleSongs.zip"
+AppDataDownloadUrl="!Game data|ballfield2.zip^!Music|MilkyTracker-ExampleSongs.zip^!MIDI instruments|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip"
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
@@ -137,6 +137,10 @@ RedefinedKeysScreenKb="0 1 2 3 4 5 6 7 8 9"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
 RedefinedKeysScreenKbNames="0 1 2 3 4 5 6 7 8 9"
+
+# Redefine gamepad keys to SDL keysyms, button order is:
+# A B X Y L1 R1 L2 R2 LThumb RThumb
+RedefinedKeysGamepad="0 1 2 3 4 5 6 7 8 9"
 
 # How long to show startup menu button, in msec, 0 to disable startup menu
 StartupMenuButtonTimeout=3000
