Forgot to disable debug

--- a/project/jni/application/biniax2/AndroidAppSettings.cfg
+++ b/project/jni/application/biniax2/AndroidAppSettings.cfg
@@ -140,7 +140,7 @@ RedefinedKeysScreenKbNames="RETURN SPACE"
 
 # Redefine gamepad keys to SDL keysyms, button order is:
 # A B X Y L1 R1 L2 R2 LThumb RThumb
-RedefinedKeysGamepad="RETURN ESCAPE"
+RedefinedKeysGamepad="RETURN ESCAPE SPACE SPACE"
 
 # How long to show startup menu button, in msec, 0 to disable startup menu
 StartupMenuButtonTimeout=0
@@ -163,10 +163,10 @@ MultiABI=n
 AppMinimumRAM=0
 
 # Application version code (integer)
-AppVersionCode=1401
+AppVersionCode=1403
 
 # Application user-visible version name (string)
-AppVersionName="1.4.01"
+AppVersionName="1.4.03"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
