--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -138,6 +138,10 @@ RedefinedKeysScreenKb="SPACE PAGEDOWN PAGEUP TAB RCTRL RETURN"
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
 RedefinedKeysScreenKbNames="Jump Next_weapon Previous_weapon Show_scores Fire Hook"
 
+# Redefine gamepad keys to SDL keysyms, button order is:
+# A B X Y L1 R1 L2 R2 LThumb RThumb
+RedefinedKeysGamepad="RETURN PAGEDOWN TAB T SPACE RCTRL RETURN RCTRL SPACE PAGEDOWN"
+
 # How long to show startup menu button, in msec, 0 to disable startup menu
 StartupMenuButtonTimeout=3000
 
@@ -159,10 +163,10 @@ MultiABI=y
 AppMinimumRAM=0
 
 # Application version code (integer)
-AppVersionCode=06212
+AppVersionCode=06213
 
 # Application user-visible version name (string)
-AppVersionName="0.6.2.12"
+AppVersionName="0.6.2.13"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=y
