Updated OpenArena project

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -136,7 +136,7 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="RETURN BACKSPACE TAB END LCTRL SPACE UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
-RedefinedKeysScreenKbNames="Change_weapon Sniper_view Show_scores Center_view Fire Jump"
+RedefinedKeysScreenKbNames="Change_weapon Sniper_view Show_scores Quick_rotate Fire Jump"
 
 # Redefine gamepad keys to SDL keysyms, button order is:
 # A B X Y L1 R1 L2 R2 LThumb RThumb
