Ouya-specific readme section, updated todo

--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -133,10 +133,10 @@ AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
-RedefinedKeysScreenKb="SPACE PAGEDOWN PAGEUP TAB RCTRL RETURN"
+RedefinedKeysScreenKb="SPACE PAGEDOWN PAGEUP TAB RETURN RCTRL"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
-RedefinedKeysScreenKbNames="Jump Next_weapon Previous_weapon Show_scores Fire Hook"
+RedefinedKeysScreenKbNames="Jump Next_weapon Previous_weapon Show_scores Hook Fire"
 
 # Redefine gamepad keys to SDL keysyms, button order is:
 # A B X Y L1 R1 L2 R2 LThumb RThumb
@@ -172,7 +172,7 @@ AppVersionName="0.6.2.13"
 ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="data .teeworlds"
+DeleteFilesOnUpgrade="%"
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
@@ -202,7 +202,7 @@ AppCmdline=''
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText='Tap left joystick to launch hook\\\\nSwipe left joystick up or down to jump'
+ReadmeText='Tap left joystick to launch hook\\\\nSwipe left joystick up or down to jump^ouya:'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
