--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -138,6 +138,13 @@ RedefinedKeysScreenKb="SPACE PAGEDOWN PAGEUP TAB RETURN RCTRL"
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
 RedefinedKeysScreenKbNames="Jump Next_weapon Previous_weapon Show_scores Hook Fire"
 
+# On-screen keys theme
+# 1 = Ultimate Droid by Sean Stieber (green, with gamepad joystick)
+# 2 = Simple Theme by Beholder (white, with gamepad joystick)
+# 3 = Sun by Sirea (yellow, with round joystick)
+# 4 = Mystery by Gerstrong (unknown color, unknown joystick)
+TouchscreenKeysTheme=3
+
 # Redefine gamepad keys to SDL keysyms, button order is:
 # A B X Y L1 R1 L2 R2 LThumb RThumb
 RedefinedKeysGamepad="RETURN PAGEDOWN TAB T SPACE RCTRL RETURN RCTRL SPACE PAGEDOWN"
@@ -202,7 +209,7 @@ AppCmdline=''
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText='Tap left joystick to launch hook\\\\nSwipe left joystick up or down to jump^ouya:'
+ReadmeText='Tap left joystick to launch hook\\nSwipe left joystick up or down to jump^ouya:'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
