--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -209,7 +209,7 @@ AppCmdline=''
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText='Tap left joystick to launch hook\\nSwipe left joystick up or down to jump^ouya:'
+ReadmeText='Tap left joystick to launch hook\\\\nSwipe left joystick up or down to jump^ouya:'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
