Re-arranged files in Keen keyboard theme

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -138,6 +138,17 @@ RedefinedKeysScreenKb="0 1 2 3 4 5 6 7 8 9"
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
 RedefinedKeysScreenKbNames="0 1 2 3 4 5 6 7 8 9"
 
+# On-screen keys theme
+# 1 = Ultimate Droid by Sean Stieber (green, with gamepad joystick)
+# 2 = Simple Theme by Beholder (white, with gamepad joystick)
+# 3 = Sun by Sirea (yellow, with round joystick)
+# 4 = Keen by Gerstrong (multicolor, with round joystick)
+TouchscreenKeysTheme=4
+
+# Redefine gamepad keys to SDL keysyms, button order is:
+# A B X Y L1 R1 L2 R2 LThumb RThumb
+RedefinedKeysGamepad="0 1 2 3 4 5 6 7 8 9"
+
 # How long to show startup menu button, in msec, 0 to disable startup menu
 StartupMenuButtonTimeout=3000
 
