--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -138,6 +138,13 @@ RedefinedKeysScreenKb="LCTRL LALT SPACE RETURN"
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
 RedefinedKeysScreenKbNames="LCTRL LALT SPACE RETURN"
 
+# On-screen keys theme
+# 1 = Ultimate Droid by Sean Stieber (green, with gamepad joystick)
+# 2 = Simple Theme by Beholder (white, with gamepad joystick)
+# 3 = Sun by Sirea (yellow, with round joystick)
+# 4 = Keen by Gerstrong (multicolor, with round joystick)
+TouchscreenKeysTheme=4
+
 # Redefine gamepad keys to SDL keysyms, button order is:
 # A B X Y L1 R1 L2 R2 LThumb RThumb
 RedefinedKeysGamepad="LCTRL LALT SPACE RETURN"
@@ -201,7 +208,7 @@ AppBuildExclude=''
 AppCmdline=''
 
 # Here you may type readme text, which will be shown during startup. Format is:
-# Text in English, use \\\\\\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
+# Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
