TeeWorlds: Forgot to update help text

--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -170,10 +170,10 @@ MultiABI=y
 AppMinimumRAM=0
 
 # Application version code (integer)
-AppVersionCode=06213
+AppVersionCode=06214
 
 # Application user-visible version name (string)
-AppVersionName="0.6.2.13"
+AppVersionName="0.6.2.14"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=y
@@ -209,7 +209,7 @@ AppCmdline=''
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText='Tap left joystick to launch hook\\\\nSwipe left joystick up or down to jump^ouya:'
+ReadmeText='Tap left joystick to launch hook\\\\nSwipe left joystick up or down to jump\\\\nTilt your phone/tablet to jump^ouya:'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
