OpenArena: revert to Slash key as weapnext instead of Enter, because of Ouya

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -133,14 +133,14 @@ AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
-RedefinedKeysScreenKb="RETURN BACKSPACE TAB END LCTRL SPACE UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
+RedefinedKeysScreenKb="SLASH BACKSPACE TAB END LCTRL SPACE UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
 RedefinedKeysScreenKbNames="Change_weapon Sniper_view Show_scores Quick_rotate Fire Jump"
 
 # Redefine gamepad keys to SDL keysyms, button order is:
 # A B X Y L1 R1 L2 R2 LThumb RThumb
-RedefinedKeysGamepad="RETURN BACKSPACE TAB END SPACE LCTRL SPACE LCTRL V E"
+RedefinedKeysGamepad="SLASH BACKSPACE TAB END SPACE LCTRL SPACE LCTRL V E"
 
 # How long to show startup menu button, in msec, 0 to disable startup menu
 StartupMenuButtonTimeout=3000
