--- a/project/jni/application/uqm-hd/AndroidAppSettings.cfg
+++ b/project/jni/application/uqm-hd/AndroidAppSettings.cfg
@@ -91,7 +91,7 @@ ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 
 # Application needs text input (y) or (n), enables button for text input on screen
-AppNeedsTextInput=y
+AppNeedsTextInput=n
 
 # Application uses joystick (y) or (n), the on-screen DPAD will be used as joystick 0 axes 0-1
 AppUsesJoystick=y
@@ -170,10 +170,10 @@ MultiABI=y
 AppMinimumRAM=0
 
 # Application version code (integer)
-AppVersionCode=07001
+AppVersionCode=07002
 
 # Application user-visible version name (string)
-AppVersionName="0.7.0.01"
+AppVersionName="0.7.0.02"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
